[package]
name = "gossip-peer"
version = "0.1.0"
authors = ["sergey-melnychuk"]
edition = "2018"
description = "Distributed membership and failure detection gossip protocols implementation"
license = "MIT"
documentation = "https://github.com/sergey-melnychuk/gossip-peer"
homepage = "https://github.com/sergey-melnychuk/gossip-peer"
repository = "https://github.com/sergey-melnychuk/gossip-peer"

[dependencies]
borrowed-byte-buffer = "0.1.0"
env_logger = "0.9.1"
log = "0.4.17"

