[package]
name = "gossip-peer"
version = "0.2.0"
authors = ["sergey-melnychuk"]
edition = "2018"
description = "Distributed membership and failure detection gossip protocols implementation"
license = "MIT"
documentation = "https://github.com/sergey-melnychuk/gossip-peer"
homepage = "https://github.com/sergey-melnychuk/gossip-peer"
repository = "https://github.com/sergey-melnychuk/gossip-peer"

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
bytes = "1.2.1"
ctrlc = "3.2.3"
